--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,12 +20,19 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+     - uses: actions/checkout@v3
+  - uses: actions/setup-node@v2
+    with:
+      node-version: '14'
+  - name: Install dependencies
+    run: npm ci
+  - name: Install Playwright
+    run: npx playwright install --with-deps
+  - name: Run your tests
+    run: npx playwright test
+  - name: Upload test results
+    if: always()
+    uses: actions/upload-artifact@v2
+    with:
+      name: playwright-report
+      path: playwright-report
