--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,20 +19,18 @@ jobs:
         node-version: [14.x, 16.x, 18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
+steps:
+  playwright:
+    name: 'Playwright Tests'
+    runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/playwright:v1.26.0-focal
     steps:
-     - uses: actions/checkout@v3
-  - uses: actions/setup-node@v2
-    with:
-      node-version: '14'
-  - name: Install dependencies
-    run: npm ci
-  - name: Install Playwright
-    run: npx playwright install --with-deps
-  - name: Run your tests
-    run: npx playwright test
-  - name: Upload test results
-    if: always()
-    uses: actions/upload-artifact@v2
-    with:
-      name: playwright-report
-      path: playwright-report
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      - name: Install dependencies
+        run: npm ci
+      - name: Run your tests
+        run: npx playwright test
